# mpcc

./: .bazelrc  .gitignore  BUILD.bazel  DEV.md  MODULE.bazel  README.md  copy_wasm.sh  requirements.in  requirements.txt
core/: BUILD.bazel  matrix_profile.h
python/: BUILD.bazel  bindings.cc  test_bindings.py
wasm/: BUILD.bazel  bindings.cc
web/: app.js  components.js  index.html  mpcc_wasm_base.js  mpcc_wasm_base.wasm  state.js  styles.css
web/components/: Controls.js  FileUpload.js  Plots.js
web/lib/: parser.js  wasm.js
