load("@nanobind_bazel//:build_defs.bzl", "nanobind_extension")
load("@rules_python//python:defs.bzl", "py_test")

nanobind_extension(
    name = "mpcc_py",
    srcs = ["bindings.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//core:core",
        "@xtensor",
    ],
)

py_test(
    name = "test_bindings",
    srcs = ["test_bindings.py"],
    deps = [
        ":mpcc_py",
        "@pip//numpy",
        "@pip//stumpy",
    ],
)
